# fs

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  artifacts.json  changelog.rss  compose.yml  dist-workspace.toml  index.html  oranda.json  pnafs-installer.sh.txt  release.toml
.devcontainer/: devcontainer.json
.github/actions/setup-rust/: action.yml
.github/workflows/: bench.yml  format.yml  proptest.yml  publish.yml  release-prep.yml  release.yml  rust-clippy.yml  test.yml  web.yml
artifacts/: index.html
changelog/: index.html
changelog/0.0.0/: index.html
changelog/0.0.1/: index.html
changelog/0.0.10/: index.html
changelog/0.0.2/: index.html
changelog/0.0.3/: index.html
changelog/0.0.4/: index.html
changelog/0.0.5/: index.html
changelog/0.0.6/: index.html
changelog/0.0.7/: index.html
changelog/0.0.8/: index.html
changelog/0.0.9/: index.html
docs/superpowers/plans/: 2026-03-20-write-support.md  2026-03-21-pnafs-redesign.md
docs/superpowers/specs/: 2026-03-20-write-support-design.md  2026-03-21-pnafs-redesign.md
proptest-regressions/: roundtrip_proptest.txt
scripts/tests/: README.md  fsx.toml  pjdfstest.toml  proptest_sweep.sh  run.sh  test_fsstress.sh  test_fsx.sh  test_mount.sh  test_mount_exclusive.sh  test_mount_readonly.sh  test_mount_write.sh  test_mount_write_encrypted.sh  test_mount_write_strategy.sh  test_pjdfstest.sh  test_write_and_persist.sh
src/: archive_io.rs  archive_lock.rs  archive_store.rs  cli.rs  command.rs  file_manager.rs  file_tree.rs  filesystem.rs  main.rs  roundtrip_proptest.rs
src/command/: complete.rs  generate.rs  mount.rs
