[package]
name = "pnafs"
version = "0.0.8"
edition = "2024"
rust-version = "1.85"
authors = ["Portable-Network-Archive Developers"]
repository = "https://github.com/Portable-Network-Archive/fs"
homepage = "https://portable-network-archive.github.io/fs/"
description = "PNA(Portable-Network-Archive) file system"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["filesystem"]
keywords = ["pna", "archive", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bugreport = "0.5.1"
clap = { version = "4.5.40", features = ["derive"] }
clap-verbosity-flag = "3.0.3"
clap_complete = "4.5.52"
fuser = "0.15.1"
id_tree = "1.8.0"
libc = "0.2.174"
log = "0.4.27"
memmap2 = "0.9.5"
pna = "0.25.1"
rpassword = "7.4.0"
simple_logger = { version = "5.0.0" , optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["user"] }

[features]
logging = ["dep:simple_logger"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
