[package]
name = "pnafs"
version = "0.0.9"
edition = "2024"
rust-version = "1.88"
authors = ["Portable-Network-Archive Developers"]
repository = "https://github.com/Portable-Network-Archive/fs"
homepage = "https://portable-network-archive.github.io/fs/"
description = "PNA(Portable-Network-Archive) file system"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["filesystem"]
keywords = ["pna", "archive", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bugreport = "0.5.1"
clap = { version = "4.6.0", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
clap_complete = "4.6.0"
fuser = "0.17.0"
libc = "0.2.180"
log = "0.4.29"
pna = "0.29.3"
rpassword = "7.4.0"
simple_logger = { version = "5.2.0" , optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.2", features = ["user"] }

[features]
logging = ["dep:simple_logger"]
macos-no-mount = ["fuser/macos-no-mount"]

[dev-dependencies]
tempfile = "3"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
