[package]
name = "pnafs"
version = "0.0.10"
edition = "2024"
rust-version = "1.88"
authors = ["Portable-Network-Archive Developers"]
repository = "https://github.com/Portable-Network-Archive/fs"
homepage = "https://portable-network-archive.github.io/fs/"
documentation = "https://docs.rs/pnafs"
description = "PNA(Portable-Network-Archive) file system"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["filesystem", "command-line-utilities"]
keywords = ["pna", "archive", "cli", "fuse", "mount"]
include = [
    "src/**/*",
    "Cargo.toml",
    "Cargo.lock",
    "CHANGELOG.md",
    "README.md",
    "LICENSE*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bugreport = "0.6.0"
clap = { version = "4.6.1", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
clap_complete = "4.6.5"
fuser = "0.17.0"
libc = "0.2.186"
log = "0.4.32"
pna = "0.35.0"
rpassword = "7.5.4"
simple_logger = { version = "5.2.0" , optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.3", features = ["fs", "user"] }

[features]
logging = ["dep:simple_logger"]
macos-no-mount = ["fuser/macos-no-mount"]

[dev-dependencies]
proptest = { version = "1", default-features = false, features = ["std"] }
tempfile = "3"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
uninlined_format_args = "warn"
semicolon_if_nothing_returned = "warn"
redundant_closure_for_method_calls = "warn"
cast_lossless = "warn"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
